[gd_scene load_steps=7 format=3 uid="uid://wttr8ledjmh8"]

[ext_resource type="Script" path="res://Entity/horror.gd" id="1_asrk4"]
[ext_resource type="PackedScene" uid="uid://dsndvenuxby0d" path="res://Entity/HorrorStates/RestingState.tscn" id="2_ohtgy"]
[ext_resource type="PackedScene" uid="uid://c880176rofeg4" path="res://Entity/HorrorStates/HuntingState.tscn" id="3_b8oax"]
[ext_resource type="PackedScene" uid="uid://w2cthiv5st18" path="res://Entity/HorrorStates/SearchingState.tscn" id="4_ea58w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xrt11"]
radius = 61.0
height = 160.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xx13r"]
radius = 175.0

[node name="Horror" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_asrk4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_xrt11")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="RestingState" parent="." instance=ExtResource("2_ohtgy")]

[node name="HuntingState" parent="." instance=ExtResource("3_b8oax")]

[node name="SearchingState" parent="." instance=ExtResource("4_ea58w")]

[node name="Prey_detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Prey_detect"]
shape = SubResource("CircleShape2D_xx13r")

[connection signal="body_entered" from="Prey_detect" to="." method="_on_prey_detect_body_entered"]
